Authentication user stories implementation